# fuckHiFi

./: package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
