[package]
name = "onerd"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "onerd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
cpal = "0.15"
window-vibrancy = "0.7.1"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"
core-media-sys = "0.1"
libc = "0.2"

[patch.crates-io]
screencapturekit = { path = "vendor/screencapturekit" }
